--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,31 @@
       });
     }
   </script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyBlQ8_ZgPAIsZiPK6Ce51pwh-K4MnkR7qw",
+      authDomain: "flutter-chat-app-8883b.firebaseapp.com",
+      projectId: "flutter-chat-app-8883b",
+      storageBucket: "flutter-chat-app-8883b.appspot.com",
+      messagingSenderId: "1032217125446",
+      appId: "1:1032217125446:web:3e36d829a569c3caa66047",
+      measurementId: "G-YRF9J2P3K7"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
